--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,43 @@
 version: "3.3"
 
 services:
-  wordpress:
-    build: dockerfiles/wordpress
-    restart: always
-    ports:
-      - 8080:80
-    links:
-      - mysql
-    working_dir: /var/www/html
+  wp_db:
+    image: mariadb:latest #10.3.7-MariaDB ?
     volumes:
-      - ./wp/wp-content/:/var/www/html/wp-content/
-    environment:
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: password
-      WORDPRESS_DB_NAME: wordpress
-
-  mysql:
-    image: mariadb #10.3.7-MariaDB ?
+      - db_data:/var/lib/mysql
     restart: always
-    volumes:
-      - ./data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: pa55w0rd
+
+  wordpress:
+    depends_on:
+      - wp_db
+    image: wordpress:latest
+    ports:
+      - 8080:80
+    restart: always
+    environment:
+      WORDPRESS_DB_HOST: wp_db:3306
+      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: password
+    volumes:
+      - wp_data:/var/www/html
+
+  wp_cli:
+    depends_on:
+      - wp_db
+      - wordpress
+    image: wordpress:cli
+    user: xfs
+    #Utilise le fichier .env
+    command: /bin/sh -c 'sleep 10; wp core install --path="/var/www/html" --url="http://localhost:8080" --title="${WEBSITE_TITLE}" --admin_user="${WEBSITE_ADMIN_USER}" --admin_password="${WEBSITE_ADMIN_USER_PASSWORD}" --admin_email="${WEBSITE_ADMIN_USER_EMAIL}"'
+    volumes:
+      - wp_data:/var/www/html
+
+volumes:
+  db_data:
+  wp_data:
